<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="generate_button">Generate</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign IN</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="chat">CHAT</string>
    <string name="enter_username">Enter username</string>
    <string name="save">Save</string>
</resources>
